[Fix]: Calendar icon alignment

--- a/app/home.module.scss
+++ b/app/home.module.scss
@@ -16,7 +16,7 @@
       font-size: var(--base-6);
       span {
         display: inline-block;
-        vertical-align: text-bottom;
+        vertical-align: sub;
       }
     }
     .button {
